--- a/clearest_view.html
+++ b/clearest_view.html
@@ -73,6 +73,8 @@
             </ul><!-- / .nav .navbar-nav -->              
           </div><!--/.navbar-collapse -->
         </nav><!-- / .navbar -->
+
+
               
 
               <!-- Scroller -->
@@ -110,23 +112,20 @@
             <div class="col-md-8">
               <!-- Image 1 -->
               <div class="project-item">
-                <img src="assets/portfolio-images/convenient-care/Picture_1.jpg" alt="Image Description" class="img-responsive">
-                <h5>Direct Mail</h5>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
+                <img src="assets/portfolio-images/3Dmammo/1-LUH_3DMammo_print.jpg" alt="Clearest View Print Ad" class="img-responsive">
+                <h5>Print Ad</h5>
               </div><!-- / .project-item -->
 
               <!-- Image 2 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/convenient-care/Picture_2.jpg" alt="Image Description" class="img-responsive">
-                <h5>OOH Bus Shelter</h5>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
+                <img src="assets/portfolio-images/3Dmammo/3-LUH_3DMammo_nextdoor.jpg" alt="Clearest View NextDoor App Ad" class="img-responsive">
+                <h5>In App Advertising</h5>
               </div><!-- / .project-item -->
 
               <!-- Image 3 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/convenient-care/Picture_3.jpg" alt="Image Description" class="img-responsive">
-                <h5>Print Ad</h5>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
+                <img src="assets/portfolio-images/3Dmammo/2-LUH_3DMammo_banner.jpg" alt="Clearest View Pullup Banner" class="img-responsive">
+                <h5>Banner</h5>
               </div><!-- / .project-item -->
 
               
@@ -137,26 +136,26 @@
             <!-- Project Info -->
             <aside class="col-md-4">
               <div class="project-info p-info-gray">
-                <h5>Integrated Campaign</h5>
+                <h5>Integrated + Digital + OOH</h5>
                 <ul>
-                  <li><h6>Client:</h6><span>Centura Health Physician Group</span></li>
-                  <li><h6>Title:</h6><span>Care You Need</span></li>
-                  <li><h6>Date:</h6><span>April - June 2018</span></li>
-                  <li><h6>Link:</h6><a target="blank" href="https://www.centura.org/our-network/centura-health-physician-group">Click Here</a></li>
-                  <li><h6>Tactics:</h6><span>Digital Email, Digital Display, Digital ID, OOH Bus Shelter, ROP Direct Mail, ROP Newspaper Print, Social Media</span></li>
+                  <li><h6>Client:</h6><span>Longmont United Hospital</span></li>
+                  <li><h6>Title:</h6><span>Because You Want The Clearest View</span></li>
+                  <li><h6>Date:</h6><span>May - June 2019</span></li>
+                  <li><h6>Link:</h6><a target="blank" href="https://www.centura.org/locations/longmont-united-hospital/medical-services/breast-care-center">Click Here</a></li>
+                  <li><h6>Tactics:</h6><span>Print Ad, Digital Ad, and Pull Up Banner</span></li>
                 </ul>
               </div>
 
               <!-- Challenge -->
               <div class="p-info">
                 <h5 class="h-alt">THE OBJECTIVE</h5>
-                <p>To develop a campaign that promoted the launch of a new concept after-hours medical clinic being launched by Centura Health. With a limited budget, tactics had to be meaningful and strategically reach customers in locations that were meaningful to them.</p>
+                <p>To educate consumers and potential clients of Longmont United Hospital's new 3-D mammogram machine, the new equipment comes with features that the traditional mammography machine cannot detect.</p>
               </div>
 
               <!-- Solution -->
               <div class="p-info">
                 <h5 class="h-alt">The solution</h5>
-                <p>In this creative concept, we are promoting the opening of the new Convenient Care Clinic in a very simple manner. The true success of this campaign was gained by the strategic placement of media, We utilized several out-of-the-box tactics that provided measurable ROI and utilized digital advertising at specific times of the day, which were during the clinics non-traditional hours, and used geo-fencing around competitor locations and in the main traffic pathways to the clinic. In addition, we implemented a new tactic for our client called Device ID. With this tactic, we were able to track mobile devices that had been served digital advertisements to determine if they wen tot he clinic. This information proved to be invaluable to the client who able to calculate the ROI by comparing it to the predetermined revenue estimates per patient that had been set by the hospital system. This proved that this tactic was highly effective for the overall success of the entire campaign.</p>
+                <p>Media placement plans were made to reach the widest possible audience. An integrated campaign was chosen to create the widest reach and still stay within a budget. By advertising within the hospital, in the local paper and online, the results of the 3-D mammography machine presumed profitable for the hospital to continue with the machine.</p>
               </div>
 
               <!-- Testimonials -->
@@ -168,43 +167,6 @@
                 </footer>
               </blockquote> -->
             </aside><!-- / .col-md-4 -->
-
-            <div class="col-md-6">
-              <!-- Image 1 -->
-              <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/convenient-care/Picture_6.jpg" alt="Image Description" class="img-responsive">
-                <h5>Email Marketing</h5>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
-              </div><!-- / .project-item -->
-              </div>
-
-              <div class="col-md-6">
-                <!-- Image 7 -->
-                <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-            <img src="assets/portfolio-images/convenient-care/Picture_7.jpg" alt="Image Description" class="img-responsive">
-            <h5>Image Description</h5>
-            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
-          </div><!-- / .project-item -->
-        </div>
-
-            <div class="col-md-6">
-              <!-- Image 1 -->
-              <div class="project-item">
-                <img src="assets/portfolio-images/convenient-care/Picture_4.jpg" alt="Image Description" class="img-responsive">
-                <h5>Print Ad in Colorado Hometown Weekly</h5>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
-              </div><!-- / .project-item -->
-              </div>
-
-              <div class="col-md-6">
-                <!-- Image 1 -->
-                <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                  <img src="assets/portfolio-images/convenient-care/Picture_5.jpg" alt="Image Description" class="img-responsive">
-                  <h5>Print Ad in The Denver Post</h5>
-                  <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
-                </div><!-- / .project-item -->
-
-
           </div><!-- / .row -->
 
         </section><!-- / .container -->
