--- a/index.html
+++ b/index.html
@@ -675,13 +675,13 @@
               </div><!-- / .portfolio-item -->
 
               <!-- Item 10 -->
-              <div class="col-md-4 portfolio-item digital">
-                <a href="stock_show.html">
+              <div class="col-md-4 portfolio-item digital ooh">
+                <a href="convenient-care.html">
                 <div class="p-wrapper hover-default">
-                  <img src="assets/images/stock-show.jpg" alt="stock show">
+                  <img src="assets/images/convenient_care_clinic.jpg" alt="convenient Care">
                   <div class="p-hover">
                     <div class="p-content">
-                      <h4>National Western Stock Show <br> Centura Health</h4>
+                      <h4>Covenient Care - CHPG - Centura Health</h4>
                       <h6 class="subheading">OOH Advertising + Digital</h6>
                     </div>
                   </div>
@@ -690,14 +690,14 @@
               </div><!-- / .portfolio-item -->
 
               <!-- Item 11 -->
-              <div class="col-md-4 portfolio-item digital">
-                <a href="stock_show.html">
+              <div class="col-md-4 portfolio-item integrated">
+                <a href="new_physicians.html">
                 <div class="p-wrapper hover-default">
-                  <img src="assets/images/stock-show.jpg" alt="stock show">
+                  <img src="assets/images/new_physician.jpg" alt="New Physician">
                   <div class="p-hover">
                     <div class="p-content">
-                      <h4>National Western Stock Show <br> Centura Health</h4>
-                      <h6 class="subheading">OOH Advertising + Digital</h6>
+                      <h4>New Primary Care Providers, Providing Whole Person Care <br> CHPG - Centura Health</h4>
+                      <h6 class="subheading">Integrated</h6>
                     </div>
                   </div>
                 </div>
@@ -705,14 +705,14 @@
               </div><!-- / .portfolio-item -->
 
               <!-- Item 12 -->
-              <div class="col-md-4 portfolio-item digital">
-                <a href="stock_show.html">
+              <div class="col-md-4 portfolio-item webdesign">
+                <a href="3g_healthcare.html">
                 <div class="p-wrapper hover-default">
-                  <img src="assets/images/stock-show.jpg" alt="stock show">
+                  <img src="assets/images/portfolio-thumbs/3g-healthcare_thumb.jpg" alt="3G Healthcare">
                   <div class="p-hover">
                     <div class="p-content">
-                      <h4>National Western Stock Show <br> Centura Health</h4>
-                      <h6 class="subheading">OOH Advertising + Digital</h6>
+                      <h4>Website Development</h4>
+                      <h6 class="subheading">Webdesign</h6>
                     </div>
                   </div>
                 </div>
@@ -720,14 +720,14 @@
               </div><!-- / .portfolio-item -->
 
               <!-- Item 13 -->
-              <div class="col-md-4 portfolio-item digital">
-                <a href="stock_show.html">
+              <div class="col-md-4 portfolio-item ooh">
+                <a href="longmont_anniversary.html">
                 <div class="p-wrapper hover-default">
-                  <img src="assets/images/stock-show.jpg" alt="stock show">
+                  <img src="assets/images/portfolio-thumbs/LUH_60thThumb.jpg" alt="Longmont United Hospital">
                   <div class="p-hover">
                     <div class="p-content">
-                      <h4>National Western Stock Show <br> Centura Health</h4>
-                      <h6 class="subheading">OOH Advertising + Digital</h6>
+                      <h4>60th Anniversary</h4>
+                      <h6 class="subheading">OOH Advertising</h6>
                     </div>
                   </div>
                 </div>
@@ -735,14 +735,14 @@
               </div><!-- / .portfolio-item -->
 
               <!-- Item 14 -->
-              <div class="col-md-4 portfolio-item digital">
-                <a href="stock_show.html">
+              <div class="col-md-4 portfolio-item branding">
+                <a href="specialized-showcase.html">
                 <div class="p-wrapper hover-default">
-                  <img src="assets/images/stock-show.jpg" alt="stock show">
+                  <img src="assets/images/portfolio-thumbs/specialized_showcase.jpg" alt="stock show">
                   <div class="p-hover">
                     <div class="p-content">
-                      <h4>National Western Stock Show <br> Centura Health</h4>
-                      <h6 class="subheading">OOH Advertising + Digital</h6>
+                      <h4>Specialized Showcase</h4>
+                      <h6 class="subheading">Brand Development</h6>
                     </div>
                   </div>
                 </div>
@@ -750,14 +750,14 @@
               </div><!-- / .portfolio-item -->
 
               <!-- Item 15 -->
-              <div class="col-md-4 portfolio-item digital">
-                <a href="stock_show.html">
+              <div class="col-md-4 portfolio-item digital integrated">
+                <a href="tickled_pink.html">
                 <div class="p-wrapper hover-default">
-                  <img src="assets/images/stock-show.jpg" alt="stock show">
+                  <img src="assets/images/portfolio-thumbs/0-LUH_Pink_Thumb.jpg" alt="Longmont United Hospital Tickled Pink">
                   <div class="p-hover">
                     <div class="p-content">
-                      <h4>National Western Stock Show <br> Centura Health</h4>
-                      <h6 class="subheading">OOH Advertising + Digital</h6>
+                      <h4>Tickled Pink - Longmont United Hospital  <br> Centura Health</h4>
+                      <h6 class="subheading">Integrated Marketing + Digital</h6>
                     </div>
                   </div>
                 </div>
@@ -766,13 +766,13 @@
 
               <!-- Item 16 -->
               <div class="col-md-4 portfolio-item digital">
-                <a href="stock_show.html">
+                <a href="clearest_view.html">
                 <div class="p-wrapper hover-default">
-                  <img src="assets/images/stock-show.jpg" alt="stock show">
+                  <img src="assets/images/portfolio-thumbs/LUH_3DMammo_Thumb.jpg" alt="Because You Want The Clearest View">
                   <div class="p-hover">
                     <div class="p-content">
-                      <h4>National Western Stock Show <br> Centura Health</h4>
-                      <h6 class="subheading">OOH Advertising + Digital</h6>
+                      <h4>Because You Want The Clearest View <br> Longmont United Hospital <br> Centura Health</h4>
+                      <h6 class="subheading">Integrated Marketing + OOH Advertising + Digital</h6>
                     </div>
                   </div>
                 </div>
