--- a/specialized-showcase.html
+++ b/specialized-showcase.html
@@ -63,7 +63,7 @@
           <!-- Navbar Links -->
           <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
             <ul class="nav navbar-nav">
-              <li><a href="#home">Home<span class="sr-only"></span></a></li>
+              <li><a href="index.html">Home<span class="sr-only"></span></a></li>
               <!-- <li><a href="#services">Services<span class="sr-only"></span></a></li> -->
               <li><a href="about.html">About<span class="sr-only"></span></a></li>
               <!-- <li><a href="sample1.html">Portfolio<span class="sr-only"></span></a></li> -->
@@ -110,21 +110,21 @@
             <div class="col-md-8">
               <!-- Image 1 -->
               <div class="project-item">
-                <img src="assets/portfolio-images/specialized_showcase/specialized-1.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/specialized_showcase/specialized-1.jpg" alt="Logo Concepts" class="img-responsive">
                 <h5>Logo Concepts</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
 
               <!-- Image 2 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/specialized_showcase/specialized-2.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/specialized_showcase/specialized-2.jpg" alt="Logo Concepts" class="img-responsive">
                 <h5>Logo Concept</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
 
               <!-- Image 3 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/specialized_showcase/specialized-3.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/specialized_showcase/specialized-3.jpg" alt="Logo Concepts" class="img-responsive">
                 <h5>Logo Concept</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
@@ -169,19 +169,19 @@
               </blockquote> -->
             </aside><!-- / .col-md-4 -->
 
-            <div class="col-md-6">
+            <div class="col-md-8">
               <!-- Image 1 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/specialized_showcase/specialized-4.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/specialized_showcase/specialized-4.jpg" alt="Logo Concepts" class="img-responsive">
                 <h5>Logo Concept</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
               </div>
 
-              <div class="col-md-6">
+              <div class="col-md-8">
                 <!-- Image 7 -->
                 <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-            <img src="assets/portfolio-images/specialized_showcase/specialized-5.jpg" alt="Image Description" class="img-responsive">
+            <img src="assets/portfolio-images/specialized_showcase/specialized-5.jpg" alt="Logo Concepts" class="img-responsive">
             <h5>Logo Concept</h5>
             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
           </div><!-- / .project-item -->
