--- a/new_physicians.html
+++ b/new_physicians.html
@@ -63,7 +63,7 @@
           <!-- Navbar Links -->
           <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
             <ul class="nav navbar-nav">
-              <li><a href="#home">Home<span class="sr-only"></span></a></li>
+              <li><a href="index.html">Home<span class="sr-only"></span></a></li>
               <!-- <li><a href="#services">Services<span class="sr-only"></span></a></li> -->
               <li><a href="about.html">About<span class="sr-only"></span></a></li>
               <!-- <li><a href="sample1.html">Portfolio<span class="sr-only"></span></a></li> -->
@@ -110,15 +110,29 @@
             <div class="col-md-8">
               <!-- Image 1 -->
               <div class="project-item">
-                <img src="assets/portfolio-images/new-physicians/nw-physicians-1.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/new-physicians/nw-physicians-1.jpg" alt="Direct Mail" class="img-responsive">
                 <h5>Direct Mail</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
 
               <!-- Image 2 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/new-physicians/new-physicians-2.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/new-physicians/new-physicians-2.jpg" alt="Half Page Magazine Ad" class="img-responsive">
                 <h5>Half Page Magazine Ad</h5>
+                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
+              </div><!-- / .project-item -->
+
+              <!-- Image 3 -->
+              <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
+                <img src="assets/portfolio-images/new-physicians/new-physicians-3.jpg" alt="Email Marketing" class="img-responsive">
+                <h5>Email Marketing</h5>
+                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
+              </div><!-- / .project-item -->
+              
+              <!-- Image 3 -->
+              <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
+                <img src="assets/portfolio-images/new-physicians/3_New-Physiciann_Print-Ad.jpg" alt="Print Ad" class="img-responsive">
+                <h5>Print Ad</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
 
