--- a/index.html
+++ b/index.html
@@ -646,12 +646,12 @@
 
               <!-- Item 8 -->
               <div class="col-md-4 portfolio-item ooh">
-                <a href="convenient-care.html">
+                <a href="st_anthony_north.html">
                 <div class="p-wrapper hover-default">
                   <img src="assets/images/mountain-biker.jpg" alt="3G Healthcare">
                   <div class="p-hover">
                     <div class="p-content">
-                      <h4>We Have Your Health Care Covered <br> Saint Anthony’s North – Centura Health</h4>
+                      <h4>We Have Your Health Care Covered <br> Saint Anthony’s North <br> Centura Health</h4>
                       <h6 class="subheading">OOH</h6>
                     </div>
                   </div>
@@ -711,7 +711,7 @@
                   <img src="assets/images/portfolio-thumbs/3g-healthcare_thumb.jpg" alt="3G Healthcare">
                   <div class="p-hover">
                     <div class="p-content">
-                      <h4>Website Development</h4>
+                      <h4>Website Development - 3G Healthcare</h4>
                       <h6 class="subheading">Webdesign</h6>
                     </div>
                   </div>
@@ -726,7 +726,7 @@
                   <img src="assets/images/portfolio-thumbs/LUH_60thThumb.jpg" alt="Longmont United Hospital">
                   <div class="p-hover">
                     <div class="p-content">
-                      <h4>60th Anniversary</h4>
+                      <h4>60th Anniversary - Longmont United Hospital</h4>
                       <h6 class="subheading">OOH Advertising</h6>
                     </div>
                   </div>
@@ -779,20 +779,7 @@
               </a>
               </div><!-- / .portfolio-item -->
 
-              <!-- Item 17 -->
-              <div class="col-md-4 portfolio-item digital">
-                <a href="stock_show.html">
-                <div class="p-wrapper hover-default">
-                  <img src="assets/images/stock-show.jpg" alt="stock show">
-                  <div class="p-hover">
-                    <div class="p-content">
-                      <h4>National Western Stock Show <br> Centura Health</h4>
-                      <h6 class="subheading">OOH Advertising + Digital</h6>
-                    </div>
-                  </div>
-                </div>
-              </a>
-              </div><!-- / .portfolio-item -->
+        
 
             </div><!-- / #pfolio -->
           </div><!-- / .row -->
