removed partner staff and updated portfolio project

--- a/minutes_matter.html
+++ b/minutes_matter.html
@@ -138,24 +138,24 @@
               <div class="project-info p-info-gray">
                 <h5>Campaign Type</h5>
                 <ul>
-                  <li><h6>Client:</h6><span></span></li>
-                  <li><h6>Title:</h6><span></span></li>
-                  <li><h6>Date:</h6><span></span></li>
-                  <li><h6>Link:</h6><a target="blank" href="#">Click Here</a></li>
-                  <li><h6>Tactics:</h6><span></span></li>
+                  <li><h6>Client:</h6><span>Centura Health Church Ranch Emergency Center</span></li>
+                  <li><h6>Title:</h6><span>Minutes Matter</span></li>
+                  <li><h6>Date:</h6><span>February 2018</span></li>
+                  <li><h6>Link:</h6><a target="blank" href="https://www.centura.org/locations/church-ranch-neighborhood-health-center?utm_source=yext&utm_medium=organic_google&utm_term=CENTURA_HEALTH_CHURCH_RANCH_EMERGENCY_CARE_CHURCHBLVD&utm_content=facilities_landing_page">Click Here</a></li>
+                  <li><h6>Tactics:</h6><span>Digital Display, Digital Email, Digital Nextdoor.com, ROP Direct Mail</span></li>
                 </ul>
               </div>
 
               <!-- Challenge -->
               <div class="p-info">
                 <h5 class="h-alt">THE OBJECTIVE</h5>
-                <p></p>
+                <p>To develop a unique campaign to promote the opening of a new emergency center at Church Ranch by Centura Health. With increased competition and limited budget, the tactics utilized in this campaign had to be highly focused on the consumer that would most benefit from the opening of this emergency center in their neighborhood.</p>
               </div>
 
               <!-- Solution -->
               <div class="p-info">
                 <h5 class="h-alt">The solution</h5>
-                <p></p>
+                <p>In this creative concept, we are promoting the opening of a new neighborhood emergency center focusing on the importance of a care center in backyard that is open 24/7/365. The goal of this campaign was to increase awareness of the Church Ranch Emergency Center through the strategic placement of digital and traditional advertising. One digital placement tactic that was implemented was sponsored placement of ads on Nextdoor.com. These ads allowed us to introduce the emergency center brand while being able to target geographic and demographic audiences that could benefit from the services provided by the emergency center. The analytics provided by the Nextdoor.com advertising platform allowed the client to access real time data to measure effective ROI.</p>
               </div>
 
               <!-- Testimonials -->
