added new portfolio

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                   <div class="p-hover">
                     <div class="p-content">
                       <h4>Maia Wealth</h4>
-                      <h6 class="subheading">Integrated Campaign</h6>
+                      <h6 class="subheading">Branding</h6>
                     </div>
                   </div>
                 </div>
@@ -609,13 +609,13 @@
 
               <!-- Item 14 -->
               <div class="col-md-4 portfolio-item branding">
-                <a href="specialized-showcase.html">
+                <a href="csu.html">
                 <div class="p-wrapper hover-default">
-                  <img src="assets/images/portfolio-thumbs/specialized_showcase.jpg" alt="stock show">
+                  <img src="https://via.placeholder.com/990x650.png" alt="Online Masters Programs - Colorado State University CSU Online">
                   <div class="p-hover">
                     <div class="p-content">
-                      <h4>Specialized Showcase</h4>
-                      <h6 class="subheading">Brand Development</h6>
+                      <h4>Online Masters Programs - Colorado State University Online</h4>
+                      <h6 class="subheading">Digital Programmatic Display</h6>
                     </div>
                   </div>
                 </div>
