--- a/csu.html
+++ b/csu.html
@@ -172,8 +172,8 @@
               <!-- Image 1 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
                 <img src="assets/portfolio-images/csu/190463_CSU_Online_MTM_Display_Apply_By_Context.jpg" alt="Display Advertising" class="img-responsive">
-                <h5></h5>
-              </div>Display Advertisingr<!-- / .project-item -->
+                <h5>Display Advertising</h5>
+              </div><!-- / .project-item -->
               
               <div class="col-md-8">
                 <!-- Image 7 -->
