--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
           <header class="sec-heading">
             <h2>What we do</h2>
-            <span class="subheading">FJG Advertising is a full service agency with in-house digital, traditional and media buying offering, an advantage to clients in today’s competitive advertising landscape.</span>
+            <span class="subheading">FJG Advertising is a full service agency with in-house digital, traditional and media buying, offering an advantage to clients in today's competitive advertising landscape.</span>
           </header>
 
           <div class="row">
@@ -174,10 +174,10 @@
 
           <!-- Image -->
           <div class="t-image">
-            <img src="assets/images/team/brian.jpg" alt="Team Member" class="img-responsive">
+            <img src="assets/images/team/brian.jpg" alt="Brian Profile Photo" class="img-responsive">
             <div class="t-description">
               <div class="content-wrapper">
-                <img src="assets/images/team/brian-urban.jpg" alt="Brian Casual Photo" class="img-responsive">
+                <img src="assets/images/team/brain_urban.jpg" alt="Brian Personality Photo" class="img-responsive">
               </div>
             </div>
           </div>
@@ -228,10 +228,10 @@
 
           <!-- Image -->
           <div class="t-image">
-            <img src="assets/images/team/phil.jpg" alt="Team Member" class="img-responsive">
+            <img src="assets/images/team/phil.jpg" alt="Phil Profile Photo" class="img-responsive">
             <div class="t-description">
               <div class="content-wrapper">
-                <img src="assets/images/team/phil_urban.jpg" alt="Phil Casual Photo" class="img-responsive">
+                <img src="assets/images/team/phil_urban.jpg" alt="Phil Personality Photo" class="img-responsive">
               </div>
             </div>
           </div>
@@ -257,10 +257,10 @@
 
           <!-- Image -->
           <div class="t-image">
-            <img src="assets/images/team/tripp.jpg" alt="Team Member" class="img-responsive">
+            <img src="assets/images/team/tripp.jpg" alt="Tripp Profile Photo" class="img-responsive">
             <div class="t-description">
               <div class="content-wrapper">
-                <img src="http://placehold.it/294x360" alt="Team Member" class="img-responsive">
+                <img src="assets/images/team/tripp_urban.jpg" alt="Tripp Personality Photo" class="img-responsive">
               </div>
             </div>
           </div>
@@ -268,7 +268,7 @@
           <!-- Info -->
           <div class="t-info">
             <h4 class="t-name">Tripp Delcore</h4>
-            <span class="t-role">Web Developer</span>
+            <span class="t-role">Digital Integration Director</span>
             <ul class="social-links">
               <li><a href="https://www.linkedin.com/in/michaeldelcore/"><i class="fa fa-linkedin"></i></a></li>
               <li><a href="tripp-bio.html"><i class="fa fa-address-card"></i></a></li>
@@ -287,10 +287,10 @@
 
           <!-- Image -->
           <div class="t-image">
-            <img src="assets/images/team/rocky.jpg" alt="Team Member" class="img-responsive">
+            <img src="assets/images/team/rocky.jpg" alt="Rocky Profile Photo" class="img-responsive">
             <div class="t-description">
               <div class="content-wrapper">
-                <img src="assets/images/team/rocky_urban.jpg" alt="Rocky Casual Photo" class="img-responsive">
+                <img src="assets/images/team/rocky_urban.jpg" alt="Rocky Personality Photo" class="img-responsive">
               </div>
             </div>
           </div>
@@ -298,7 +298,7 @@
           <!-- Info -->
           <div class="t-info">
             <h4 class="t-name">Rocky Namvong</h4>
-            <span class="t-role">Executive Assistant</span>
+            <span class="t-role">Social Manager</span>
             <ul class="social-links">
               <li><a href="https://www.linkedin.com/in/ynamvong/"><i class="fa fa-linkedin"></i></a></li>
               <li><a href="rocky-bio.html"><i class="fa fa-address-card"></i></a></li>
@@ -316,10 +316,10 @@
 
           <!-- Image -->
           <div class="t-image">
-            <img src="assets/images/team/kristin.jpg" alt="Team Member" class="img-responsive">
+            <img src="assets/images/team/kristin.jpg" alt="Kristin Profile Photo" class="img-responsive">
             <div class="t-description">
               <div class="content-wrapper">
-                <img src="assets/images/team/kristin_urban.jpg" alt="Kristin Casual Photo" class="img-responsive">
+                <img src="assets/images/team/kristin_urban.jpg" alt="Kristin Personality Photo" class="img-responsive">
               </div>
             </div>
           </div>
@@ -348,19 +348,19 @@
             <img src="http://placehold.it/360x440" alt="Team Member" class="img-responsive">
             <div class="t-description">
               <div class="content-wrapper">
-                <img src="http://placehold.it/294x360" alt="Team Member" class="img-responsive">
+                <img src="assets/images/team/quaid_urban.jpg" alt="Team Member" class="img-responsive">
               </div>
             </div>
           </div>
 
           <!-- Info -->
           <div class="t-info">
-            <h4 class="t-name">Jane Doe</h4>
-            <span class="t-role">Lead Designer</span>
-            <ul class="social-links">
+            <h4 class="t-name">Quaid Meyer</h4>
+            <span class="t-role">Director of Security </span>
+            <!-- <ul class="social-links">
               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
               <li><a href="#"><i class="fa fa-address-card"></i></a></li>
-            </ul>
+            </ul> -->
           </div>
 
         </div><!-- / .t-item -->
@@ -377,7 +377,7 @@
             <div class="t-description">
               <a href="mailto:jobs@fjgadvertising.com?Subject=Website Job Inquiry" target="_top">
               <h4 class="h-alt">Apply Now</h4></a>
-              <p>We are allways looking for passionate lorem ipsum dolor sit amet, consectetur dolor adipisicing elit. Architecto aliquam voluptas doloribus maiores sit.</p>
+              <p>We are always looking for passionate creative and strategic minds to join our team. If you think you have the talent, send us your resume.</p>
             </div>
           </div>
 
