--- a/new_physicians.html
+++ b/new_physicians.html
@@ -117,8 +117,8 @@
 
               <!-- Image 2 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/new-physicians/new-physicians-2.jpg" alt="Half Page Magazine Ad" class="img-responsive">
-                <h5>Half Page Magazine Ad</h5>
+                <img src="assets/portfolio-images/new-physicians/new_physicians_magazine_half-page-ad.gif" alt="Half Page Magazine Ad" class="img-responsive">
+                <h5>Magazine Ad</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
 
