--- a/index.html
+++ b/index.html
@@ -345,10 +345,10 @@
 
           <!-- Image -->
           <div class="t-image">
-            <img src="http://placehold.it/360x440" alt="Team Member" class="img-responsive">
+            <img src="assets/images/team/quaid.jpg" alt="Quaid Profile Photo" class="img-responsive">
             <div class="t-description">
               <div class="content-wrapper">
-                <img src="assets/images/team/quaid_urban.jpg" alt="Team Member" class="img-responsive">
+                <img src="assets/images/team/quaid_all_business.jpg" alt="Quaid Personality Photo" class="img-responsive">
               </div>
             </div>
           </div>
@@ -357,10 +357,10 @@
           <div class="t-info">
             <h4 class="t-name">Quaid Meyer</h4>
             <span class="t-role">Director of Security </span>
-            <!-- <ul class="social-links">
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-address-card"></i></a></li>
-            </ul> -->
+            <ul class="social-links">
+              <!-- <li><a href="#"><i class="fa fa-linkedin"></i></a></li> -->
+              <li><a href="quaid.html"><i class="fa fa-address-card"></i></a></li>
+            </ul>
           </div>
 
         </div><!-- / .t-item -->
@@ -611,7 +611,7 @@
               <div class="col-md-4 portfolio-item branding">
                 <a href="csu.html">
                 <div class="p-wrapper hover-default">
-                  <img src="https://via.placeholder.com/990x650.png" alt="Online Masters Programs - Colorado State University CSU Online">
+                  <img src="assets/images/portfolio-thumbs/csu_thumb.jpg" alt="Online Masters Programs - Colorado State University CSU Online">
                   <div class="p-hover">
                     <div class="p-content">
                       <h4>Online Masters Programs - Colorado State University Online</h4>
