--- a/maia_wealth.html
+++ b/maia_wealth.html
@@ -112,20 +112,20 @@
             <div class="col-md-8">
               <!-- Image 1 -->
               <div class="project-item">
-                <img src="assets/portfolio-images/maia_wealth/maia_stationary.png" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/maia_wealth/maia_stationary.png" alt="Maia Wealth Stationary" class="img-responsive">
                 <h5>Stationary</h5>
               </div><!-- / .project-item -->
 
               <!-- Image 2 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <!-- <img src="assets/portfolio-images/think_fast/think_fast_elevator.jpg" alt="Image Description" class="img-responsive">
-                <h5>Elevator Door Wrap</h5> -->
+                <img src="assets/portfolio-images/maia_wealth/maia_wealth_logo.jpg" alt="Maia Wealth Logo" class="img-responsive">
+                <h5>Maia Wealth Logo</h5>
               </div><!-- / .project-item -->
 
               <!-- Image 3 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <!-- <img src="assets/portfolio-images/think_fast/think_fast_print.png" alt="Image Description" class="img-responsive">
-                <h5>Print Advertising</h5> -->
+                <img src="assets/portfolio-images/maia_wealth/maia_wealth_logo_mark.jpg" alt="Maia Wealth Logo Mark" class="img-responsive">
+                <h5>Maia Wealth Logo Mark</h5>
               </div><!-- / .project-item -->
 
               
