--- a/minutes_matter.html
+++ b/minutes_matter.html
@@ -136,7 +136,7 @@
             <!-- Project Info -->
             <aside class="col-md-4">
               <div class="project-info p-info-gray">
-                <h5>Campaign Type</h5>
+                <h5>Integrated Campaign</h5>
                 <ul>
                   <li><h6>Client:</h6><span>Centura Health Church Ranch Emergency Center</span></li>
                   <li><h6>Title:</h6><span>Minutes Matter</span></li>
